
* 2014-03-12 - thorben.betten@open-xchange.com

 - Fix for bug 31491: Removed duplicate CREATE TABLE statements from affected classes
 - Fix for bug 19763: Support setter for IMAP/SMTP port through SOAP interface
 - Fix for bug 31395: Enhanced localized error message according to proposal from documentation team

* 2014-03-11 - jan.bauerdick@open-xchange.com

 - Fix for bug 30843: Added properties to explicitly choose SSL protocols

* 2014-03-11 - marcus.klein@open-xchange.com

 - Fix for bug 29980: Use row locks on complete table configdb.context_server2db_pool to prevent a delete context call to remove the schema
   a create context call is currently writing to. The complete table must be locked to prevent deadlocks on concurrent create context calls.

* 2014-03-10 - thorben.betten@open-xchange.com

 - Fix for bug 30652: Signal value of property "com.openexchange.forceHTTPS" to App Suite UI
 - Fix for bug 31304: Suppress warning if "pop3.refreshrate" property is missing. Silently use fall-back value

* 2014-03-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 31453: Prefer user's personal reminder for CalDAV in public folders
 - Fix for bug 31073: Use "Display name" for a contact, use "Name" for a distribution list in truncation error messages 
 - Fix for bug 31072: Use "First name" instead of "Given name" in truncation error messages 

* 2014-03-07 - jan.bauerdick@open-xchange.com

 - Fix for bug 31335: Fixed/Added missing dependencies on update tasks

* 2024-03-07 - ioannis.chouklis@open-xchange.com

- Fix for bug 31448: [L3] Backend mistakes IMAP with SMTP password entries by updating external mail account credentials 

* 2014-03-07 - marcus.klein@open-xchange.com

 - Fix for bug 31154: Necessary Ant tasks for our build system have not be available by default on Debian Squeeze but on Wheezy. Adding an
   additional JAR to the build call on Debian Squeeze systems when using CDBS for building.